Puts contact info into contact items component. Fixes width of resource details on small screens.

--- a/frontend/src/stardrive_material.scss
+++ b/frontend/src/stardrive_material.scss
@@ -32,6 +32,7 @@
     justify-items: center;
     grid-template-columns: 1fr;
     position: relative;
+    max-width: 100vw;
 
     .row {
       margin-top: 4em;
@@ -44,6 +45,7 @@
       .row {
         padding-left: 2em;
         padding-right: 2em;
+        max-width: 90%;
       }
     }
 
